--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,39 @@
+.main__joinUsDiv {
+    padding: 0 0 2rem 0;
+    text-align: center;
+}
+.main__joinButtonDiv {
+    display: flex;
+    justify-content: center;
+}
+.main__joinButtonWrapper2 {
+    display: flex;
+    justify-content: center;
+
+    background-color: #4D2853;
+    width: 77%;
+
+    border-radius: 1.5rem;
+}
+.main__joinButtonWrapper1 {
+    background-color: #4AC3FF;
+    width: 87%;
+
+    border-radius: 1.5rem;
+}
+.main__joinButton {
+    padding: 0.75rem 8.5rem;
+
+    background-color: #E5E288;
+
+    font-family: 'Roboto Mono', monospace;
+    font-size: 3.75rem;
+    font-weight: 500;
+
+    border-radius: 1.5rem;
+    border: none;
+}
+
 .main__logo {
     padding: 4rem 0;
 }
