--- a/css/index.css
+++ b/css/index.css
@@ -43,11 +43,24 @@
 }
 
 .main__paragraphDiv {
-    width: 50%;
+    flex-basis: 55%;
+    margin-right: 1.25rem;
+}
+.main__paragraph {
+    padding: 1.3rem 1.25rem 0rem 1.25rem;
+    background-color: white;
+    height: 100%;
+    line-height: 2rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    border-radius: 1rem;
+}
+.main__councilFigure {
+    flex-basis: 45%;
+    margin-left: 1.25rem;
 }
 .main__councilImage {
-    flex-basis: 50%;
+    height: 100%;
     width: 100%;
-    height: auto;
 }
 
