Add top-bottom padding to header

--- a/css/shared.css
+++ b/css/shared.css
@@ -16,7 +16,7 @@
 
 /* Header */
 .header__wrapperWidth {
-    padding-bottom: 1rem;
+    padding: 1rem 0rem;
     background-color: black;
     box-shadow: 0px 10px 20px rgb(9, 13, 71);
 }
