--- a/css/index.css
+++ b/css/index.css
@@ -5,42 +5,64 @@
 .main__joinButtonDiv {
     display: flex;
     justify-content: center;
+    position: relative;
+    bottom: 60px;
 }
 .main__joinButtonWrapper2 {
     display: flex;
     justify-content: center;
 
     background-color: #4D2853;
-    width: 58%;
+    width: 300px;
 
     border-radius: 1.5rem;
+    transition: width .5s .2s;
 }
 .main__joinButtonWrapper1 {
     background-color: #4AC3FF;
-    width: 87.5%;
+    width: 290px;
 
     border-radius: 1.5rem;
+    transition: width .5s .2s;
 }
 .main__joinButton {
-    padding: 0.7rem 6rem;
+    padding: 0.7rem 4rem;
 
     background-color: #E5E288;
+    width: 280px;
 
     font-family: 'Roboto Mono', monospace;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 600;
 
     border-radius: 1.5rem;
     border: none;
+    transition: width .5s .2s;
+}
+.main__joinButton a {
+    text-decoration: none;
+    color: black;
+}
+.main__joinButtonWrapper2:hover {
+    width: 500px;
+}
+.main__joinButtonWrapper1:hover {
+    width: 400px;
 }
 
+
+
+
 .main__logo {
-    padding: 3rem 0;
-    height: 50rem;
+    padding: 3rem 0 0 0;
+    width: 50%;
+    height: auto;
 }
 
 .main__infoFlexDiv {
     display: flex;
+
+    margin-bottom: 6rem;
 }
 
 .main__paragraphDiv {
@@ -48,7 +70,8 @@
     margin-right: 1.25rem;
 }
 .main__paragraph {
-    padding: 1.3rem 1.25rem 0rem 1.25rem;
+    /* padding: 1.3rem 1.25rem 0rem 1.25rem; */
+    padding: 2rem;
 
     background-color: white;
 
@@ -57,21 +80,27 @@
     line-height: 2rem;
     font-size: 0.9rem;
     font-weight: 500;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-    border-radius: 1rem;
+    border-radius: .5rem;
+    box-shadow: 2px 2px 2px #070914;
 }
 .main__councilFigure {
     flex-basis: 45%;
+
     margin-left: 1.25rem;
+
 }
 .main__councilImage {
     height: 100%;
     width: 100%;
+
+    border-radius: .5rem;
+    box-shadow: 2px 2px 2px #070914;
 }
 
 .main__circleDivFlex {
-    margin: 5rem 0rem;
-
+    margin-bottom: 3rem;
     display: flex;
     justify-content: space-evenly;
 }
@@ -84,6 +113,7 @@
     background-color: #4D2853;
 
     border-radius: 50%;
+    box-shadow: 2px 2px 2px #070914;
 }
 .main__circleTitle {
     margin: auto;
