--- a/css/shared.css
+++ b/css/shared.css
@@ -18,14 +18,14 @@
 .header__wrapperWidth {
     padding: 1rem 0rem;
     background-color: black;
-    box-shadow: 0px 10px 20px rgb(9, 13, 71);
 }
+
 .header__logo {
     position: relative;
     z-index: 0;
     padding: 1rem;
 
-    width: 200px;
+    width: 150px;
     height: auto;
 }
 
@@ -55,6 +55,12 @@
     text-decoration: none; /* removed bullets from anchors*/
     color: white;
 }
+.nav__anchor:hover {
+    color: #4D2853;
+}
+.nav__anchor.active {
+    color: #4D2853;
+}
 .nav__joinButton {
     margin-left: 0.5rem;
     padding: 0.3rem 1.3rem;
@@ -67,6 +73,10 @@
     border-style: none;
     border-radius: 0.95rem;
 }
+.nav__joinButton:hover {
+    background-color: #4D2853;
+    color: white;
+}
 .nav__joinAnchor {
     text-decoration: none;
 
@@ -75,13 +85,12 @@
 }
 
 
-
 /* Footer */
 .footer__wrapperWidth {
     background-color: black;
 }
 .footer {
-    padding: 4rem 0rem 3.25rem 0rem;
+    padding: 2rem;
 
     display: flex;
     justify-content: space-between;
@@ -93,18 +102,26 @@
     align-items: center;
 }
 .footer__copyright {
-    font-size: 1.15rem;
+    font-size: .8rem;
 }
 .footer__iconsDiv {
-    width: 50%;
+    width: 20%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .footer__iconWrapper {
     padding: 0.5rem 1.5rem;
-    background-color: #001902;
+    
+    font-size: 1.5rem;
     border-radius: 1.1rem;
     color: #E5E288;
+}
+.footer__iconWrapper a {
+    text-decoration: none;
+    color: white;
+}
+.footer__iconWrapper a:hover {
+    color: #4D2853;
 }
 .footer__iconTitle {
     display: inline;
