--- a/css/shared.css
+++ b/css/shared.css
@@ -98,33 +98,44 @@
     background-color: black;
 }
 .footer {
-    padding: 2rem;
-    margin-top: 4rem;
-
     display: flex;
     justify-content: space-between;
 
+    padding: 2rem;
+    margin-top: 4rem;
+
     color: white;
 }
-.footer__copyrightDiv {
+
+
+.footer__copyright {
     display: flex;
     align-items: center;
 }
-.footer__copyright {
-    font-size: .8rem;
+.footer__figureUvuLogo {
+    width: 50%;
 }
+.footer__uvuLogo {
+    width: 100%;
+    height: auto;
+}
+
+
 .footer__iconsDiv {
-    width: 20%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+
+    width: 20%;
 }
 .footer__iconWrapper {
     padding: 0.5rem 1.5rem;
     
     font-size: 1.5rem;
-    border-radius: 1.1rem;
+   
     color: #E5E288;
 }
+/*Social media icons*/
 .footer__iconWrapper a {
     text-decoration: none;
     color: white;
@@ -132,7 +143,4 @@
 .footer__iconWrapper a:hover {
     color: #E5E288;
 }
-.footer__iconTitle {
-    display: inline;
-    font-weight: 500;
-}
+
