--- a/css/index.css
+++ b/css/index.css
@@ -16,14 +16,14 @@
     width: 300px;
 
     border-radius: 1.5rem;
-    transition: width .5s .2s;
+    transition: width .5s 0.1s;
 }
 .main__joinButtonWrapper1 {
     background-color: #4AC3FF;
     width: 290px;
 
     border-radius: 1.5rem;
-    transition: width .5s .2s;
+    transition: width .5s 0.2s;
 }
 .main__joinButton {
     padding: 0.7rem 4rem;
@@ -72,7 +72,7 @@
     /* padding: 1.3rem 1.25rem 0rem 1.25rem; */
     padding: 2rem;
 
-    background-color: white;
+    background: linear-gradient(0deg, rgba(255,255,255,0.8762692577030813) 0%, rgba(255,255,255,1) 100%);
 
     height: 100%;
 
