added wrap to divs

--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,7 @@
 
 .main__infoFlexDiv {
     display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -102,6 +103,7 @@
     margin-bottom: 3rem;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .main__circle {
     height: 15rem;
