--- a/css/index.css
+++ b/css/index.css
@@ -1,122 +1,114 @@
 .main__joinUsDiv {
-    padding: 0 0 1.25rem 0;
-    text-align: center;
+  padding: 0 0 1.25rem 0;
+  text-align: center;
 }
-.main__joinButtonDiv {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    bottom: 60px;
-}
+/* .main__joinButtonDiv {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  bottom: 60px;
+} */
 .main__joinButtonWrapper2 {
-    display: flex;
-    justify-content: center;
-
-    background-color: #4D2853;
-    width: 300px;
-
-    border-radius: 1.5rem;
-    transition: width .5s 0.1s;
+  display: flex;
+  justify-content: center;
+  background-color: #4d2853;
+  /* width: 300px; */
+  /* border-radius: 1.5rem; */
+  transition: width 0.5s 0.1s;
 }
-.main__joinButtonWrapper1 {
-    background-color: #4AC3FF;
-    width: 290px;
+/* .main__joinButtonWrapper1 {
+  background-color: #4ac3ff;
+  width: 290px;
 
-    border-radius: 1.5rem;
-    transition: width .5s 0.2s;
-}
+  border-radius: 1.5rem;
+  transition: width 0.5s 0.2s;
+} */
 .main__joinButton {
-    padding: 0.7rem 4rem;
+  /* padding: 0.7rem 4rem; */
 
-    background-color: #E5E288;
-    width: 280px;
+  /* background-color: #e5e288; */
+  width: 280px;
 
-    font-family: 'Roboto Mono', monospace;
-    font-size: 2rem;
-    font-weight: 600;
+  font-family: "Roboto Mono", monospace;
+  font-size: 2rem;
+  font-weight: 600;
 
-    border-radius: 1.5rem;
-    border: none;
-    
+  border-radius: 1.5rem;
+  border: none;
 }
 .main__joinButton a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 .main__joinButtonWrapper2:hover {
-    width: 500px;
+  width: 500px;
 }
 .main__joinButtonWrapper1:hover {
-    width: 400px;
+  width: 400px;
 }
 
-
-
-
 .main__logo {
-    padding: 3rem 0 0 0;
-    width: 50%;
-    height: auto;
+  padding: 3rem 0 0 0;
+  width: 50%;
+  height: auto;
 }
 
 .main__infoFlexDiv {
-    display: flex;
-
+  display: flex;
 }
 
 .main__paragraphDiv {
-    flex-basis: 55%;
-    margin-right: 1.25rem;
+  flex-basis: 55%;
+  margin-right: 1.25rem;
 }
 .main__paragraph {
-    /* padding: 1.3rem 1.25rem 0rem 1.25rem; */
-    padding: 2rem;
+  /* padding: 1.3rem 1.25rem 0rem 1.25rem; */
+  padding: 2rem;
 
-    background: linear-gradient(0deg, rgba(255,255,255,0.8762692577030813) 0%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.8762692577030813) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
 
-    height: 100%;
+  height: 100%;
 
-    line-height: 2rem;
-    font-size: 0.9rem;
+  line-height: 2rem;
+  font-size: 0.9rem;
 
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 
-    border-radius: .5rem;
-    box-shadow: 2px 2px 2px #070914;
-}
-.main__councilFigure {
-    flex-basis: 45%;
-
-    margin-left: 1.25rem;
-
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 2px #070914;
 }
 .main__councilImage {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 
-    border-radius: .5rem;
-    box-shadow: 2px 2px 2px #070914;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 2px #070914;
 }
 
 .main__circleDivFlex {
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  margin-bottom: 3rem;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .main__circle {
-    height: 15rem;
-    width: 15rem;
-
-    display: flex;
-
-    background-color: #4D2853;
-
-    border-radius: 50%;
-    box-shadow: 2px 2px 2px #070914;
+  height: 15rem;
+  width: 15rem;
+  display: flex;
+  background-color: #4d2853;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px #070914;
 }
 .main__circleTitle {
-    margin: auto;
-    color: white;
+  margin: auto;
+  color: white;
 }
-
+#uvu-logo {
+  height: 50%;
+  width: 50%;
+}
